<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">
    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:elevation="4dp"
        app:cardCornerRadius="8dp"
        app:cardMaxElevation="4dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="166.67dp"
            android:layout_height="250dp"
            android:contentDescription="@string/poster_movies"
            android:scaleType="centerCrop"
            tools:srcCompat="@tools:sample/avatars" />
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/tv_id_detail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/id_number_detail"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/cardView"
        app:layout_constraintTop_toTopOf="@+id/cardView" />

    <TextView
        android:id="@+id/tv_title_detail"
        style="@style/DetailDesc.Title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/title_detail"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/tv_id_detail"
        app:layout_constraintTop_toBottomOf="@+id/tv_id_detail" />

    <TextView
        android:id="@+id/tv_language_detail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/dummy_language_default"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/tv_title_detail"
        app:layout_constraintTop_toBottomOf="@+id/tv_title_detail" />

    <TextView
        android:id="@+id/tv_release_detail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/release_date_detail"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/tv_language_detail"
        app:layout_constraintTop_toBottomOf="@+id/tv_language_detail" />

    <TableLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:paddingStart="8dp"
        android:paddingEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView">

        <TableRow
            style="@style/DetailDesc.TableRow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                style="@style/DetailDesc.TableRow.TextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="24dp"
                android:text="@string/popularity_detail" />

            <TextView
                android:id="@+id/tv_popularity_detail"
                style="@style/DetailDesc.TableRow.TextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/dummy_number" />

        </TableRow>
        <TableRow
            style="@style/DetailDesc.TableRow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                style="@style/DetailDesc.TableRow.TextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/overview_detail" />

            <TextView
                android:id="@+id/tv_overview_detail"
                style="@style/DetailDesc.TableRow.TextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/dummy_overview_default" />

        </TableRow>
    </TableLayout>

</androidx.constraintlayout.widget.ConstraintLayout>